corrigido index.html

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <!-- Cabeçalho. Feito para todas as págians -->
     <header>
         <div>
             <a class="links" href="">Sobre mim</a>
-            <a class="links" href="./formacao.html">Formação</a>
-            <a class="links" href="./projetos.html">Projetos pessoais</a>
-            <a class="links" href="./contato.html">Contato</a>
+            <a class="links" href="./pages/formacao.html">Formação</a>
+            <a class="links" href="./pages/projetos.html">Projetos pessoais</a>
+            <a class="links" href="./pages/contato.html">Contato</a>
         </div>
     </header>
 
