--- a/pages/contato.html
+++ b/pages/contato.html
@@ -13,7 +13,7 @@
     <!-- Cabeçalho. Feito para todas as págians -->
     <header>
         <div>
-            <a class="links" href="./index.html">Sobre mim</a>
+            <a class="links" href="../index.html">Sobre mim</a>
             <a class="links" href="./formacao.html">Formação</a>
             <a class="links" href="./projetos.html">Projetos pessoais</a>
             <a class="links" href="">Contato</a>
